fix missing margin move id tags

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,9 @@
   &detail-window {
     height: calc(100vh - 150px);
   }
+  &search-bar {
+    margin-right: 1rem;
+  }
 }
 
 .centered-image {
